force-app/main/default/objects/Social_Media_Lead__c/Social_Media_Lead__c.object-meta.xml
<CustomObject>
    <label>Social Media Lead</label>
    <nameField>
        <displayFormat>SML-{00000}</displayFormat>
        <label>FB Leads Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Social Media Leads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>