force-app/main/default/objects/Social_Media_Lead__c/fields/Create_Lead_Manually__c.field-meta.xml
<CustomField>
    <fullName>Create_Lead_Manually__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Lead Manually</label>
    <type>Checkbox</type>
</CustomField>