force-app/main/default/objects/Social_Media_Lead__c/fields/Form_Data__c.field-meta.xml
<CustomField>
    <fullName>Form_Data__c</fullName>
    <label>Form Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>