force-app/main/default/objects/Social_Media_Lead__c/fields/Lead_Created_Time__c.field-meta.xml
<CustomField>
    <fullName>Lead_Created_Time__c</fullName>
    <label>Lead Created Time</label>
    <type>DateTime</type>
</CustomField>