force-app/main/default/objects/Social_Media_Lead__c/fields/SF_Lead__c.field-meta.xml
<CustomField>
    <fullName>SF_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SF Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Social Media Leads</relationshipLabel>
    <relationshipName>Social_Media_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>