force-app/main/default/objects/Social_Media_Lead__c/listViews/my_new_view.listView-meta.xml
<ListView>
    <fullName>my_new_view</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Create_Lead_Manually__c</columns>
    <columns>Processed__c</columns>
    <columns>Form_ID__c</columns>
    <columns>SF_Lead__c</columns>
    <columns>Result__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>7/13/2024 12:00 AM</value>
    </filters>
    <label>my new view</label>
</ListView>