force-app/main/default/objects/Social_Media_Lead__c/listViews/Unprocessed_records.listView-meta.xml
<ListView>
    <fullName>Unprocessed_records</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>Result__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Form_ID__c</columns>
    <columns>Lead_ID__c</columns>
    <columns>Lead_Created_Time__c</columns>
    <columns>Form_Data__c</columns>
    <columns>Page_ID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Processed__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Unprocessed records</label>
</ListView>